OOP: property getter and setter; inheritance

--- a/06_OOP/Class Object Attributes and Methods.ipynb
+++ b/06_OOP/Class Object Attributes and Methods.ipynb
@@ -110,7 +110,7 @@
     "    allowed = ['cat', 'dog', 'fish', 'rat']\n",
     "    @classmethod\n",
     "    def display_allowed_pets(cls):\n",
-    "        return Pet.allowed\n",
+    "        return cls.allowed\n",
     "    @classmethod\n",
     "    def from_string(cls, data_string):\n",
     "        name, species = data_string.split(',')\n",
