Decorators: functions with different signatures

--- a/06_OOP/cards_and_deck.ipynb
+++ b/06_OOP/cards_and_deck.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "id": "cec3a6c9",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "id": "8432b989",
    "metadata": {},
    "outputs": [],
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "id": "307ec8ef",
    "metadata": {},
    "outputs": [],
@@ -43,6 +43,9 @@
     "    \n",
     "    def __repr__(self):\n",
     "        return f\"Deck of {self.count()} cards.\"\n",
+    "    \n",
+    "    def __iter__(self):\n",
+    "        return iter(self.cards)\n",
     "    \n",
     "    def count(self):\n",
     "        return len(self.cards)\n",
@@ -69,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "id": "d531412d",
    "metadata": {},
    "outputs": [],
@@ -79,46 +82,97 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "fd4f590f",
+   "execution_count": 5,
+   "id": "fccb0b9a",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Deck of 52 cards.\n"
+      "A of Hearts\n",
+      "2 of Hearts\n",
+      "3 of Hearts\n",
+      "4 of Hearts\n",
+      "5 of Hearts\n",
+      "6 of Hearts\n",
+      "7 of Hearts\n",
+      "8 of Hearts\n",
+      "9 of Hearts\n",
+      "10 of Hearts\n",
+      "J of Hearts\n",
+      "Q of Hearts\n",
+      "K of Hearts\n",
+      "A of Diamonds\n",
+      "2 of Diamonds\n",
+      "3 of Diamonds\n",
+      "4 of Diamonds\n",
+      "5 of Diamonds\n",
+      "6 of Diamonds\n",
+      "7 of Diamonds\n",
+      "8 of Diamonds\n",
+      "9 of Diamonds\n",
+      "10 of Diamonds\n",
+      "J of Diamonds\n",
+      "Q of Diamonds\n",
+      "K of Diamonds\n",
+      "A of Clubs\n",
+      "2 of Clubs\n",
+      "3 of Clubs\n",
+      "4 of Clubs\n",
+      "5 of Clubs\n",
+      "6 of Clubs\n",
+      "7 of Clubs\n",
+      "8 of Clubs\n",
+      "9 of Clubs\n",
+      "10 of Clubs\n",
+      "J of Clubs\n",
+      "Q of Clubs\n",
+      "K of Clubs\n",
+      "A of Spades\n",
+      "2 of Spades\n",
+      "3 of Spades\n",
+      "4 of Spades\n",
+      "5 of Spades\n",
+      "6 of Spades\n",
+      "7 of Spades\n",
+      "8 of Spades\n",
+      "9 of Spades\n",
+      "10 of Spades\n",
+      "J of Spades\n",
+      "Q of Spades\n",
+      "K of Spades\n"
      ]
     }
    ],
+   "source": [
+    "for card in deck:\n",
+    "    print(card)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fd4f590f",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "print(deck)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "aa96d8be",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Deck of 52 cards."
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "deck.shuffle()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "a3126c61",
    "metadata": {},
    "outputs": [],
@@ -128,99 +182,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "94fa7eeb",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3 of Clubs"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "card"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "2b7582ec",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[A of Diamonds,\n",
-       " K of Spades,\n",
-       " 2 of Clubs,\n",
-       " 9 of Spades,\n",
-       " 7 of Hearts,\n",
-       " 2 of Diamonds,\n",
-       " 8 of Diamonds,\n",
-       " 4 of Clubs,\n",
-       " 10 of Spades,\n",
-       " 5 of Diamonds,\n",
-       " 7 of Clubs,\n",
-       " A of Spades,\n",
-       " 6 of Diamonds,\n",
-       " 8 of Clubs,\n",
-       " 6 of Hearts,\n",
-       " A of Clubs,\n",
-       " 9 of Diamonds,\n",
-       " 3 of Diamonds,\n",
-       " Q of Diamonds,\n",
-       " J of Spades,\n",
-       " 9 of Clubs,\n",
-       " 7 of Spades,\n",
-       " Q of Clubs,\n",
-       " J of Hearts,\n",
-       " A of Hearts,\n",
-       " K of Clubs,\n",
-       " 10 of Hearts,\n",
-       " 10 of Clubs,\n",
-       " 4 of Spades,\n",
-       " 6 of Clubs,\n",
-       " 8 of Hearts,\n",
-       " 9 of Hearts,\n",
-       " J of Diamonds,\n",
-       " K of Hearts,\n",
-       " 2 of Spades,\n",
-       " 4 of Hearts,\n",
-       " Q of Hearts,\n",
-       " 8 of Spades,\n",
-       " 7 of Diamonds,\n",
-       " 5 of Clubs,\n",
-       " 5 of Spades,\n",
-       " 3 of Hearts,\n",
-       " 2 of Hearts,\n",
-       " K of Diamonds,\n",
-       " 4 of Diamonds,\n",
-       " 6 of Spades,\n",
-       " 10 of Diamonds,\n",
-       " 3 of Spades,\n",
-       " J of Clubs,\n",
-       " Q of Spades,\n",
-       " 5 of Hearts]"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "deck.cards"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "20c23b2a",
    "metadata": {},
    "outputs": [],
@@ -240,48 +222,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "04dea876",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[5 of Hearts,\n",
-       " Q of Spades,\n",
-       " J of Clubs,\n",
-       " 3 of Spades,\n",
-       " 10 of Diamonds,\n",
-       " 6 of Spades,\n",
-       " 4 of Diamonds,\n",
-       " K of Diamonds,\n",
-       " 2 of Hearts,\n",
-       " 3 of Hearts]"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "cards"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "df91b39f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Deck of 41 cards.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(deck)"
    ]
