--- a/11_Python_Generators_and_Iterators/Iterators/custom iterator.ipynb
+++ b/11_Python_Generators_and_Iterators/Iterators/custom iterator.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "id": "01bf5f1f",
    "metadata": {},
    "outputs": [],
@@ -10,24 +10,20 @@
     "class Counter:\n",
     "    \n",
     "    def __init__(self, low, high):\n",
-    "        self.current = low\n",
+    "        self.low = low\n",
     "        self.high = high\n",
     "        \n",
     "    def __iter__(self):\n",
     "        return self\n",
     "    \n",
     "    def __next__(self):\n",
-    "        if self.current < self.high:\n",
-    "            num = self.current\n",
-    "            self.current += 1\n",
-    "            return num\n",
-    "        raise StopIteration"
+    "        return 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "cc36a186",
+   "execution_count": 2,
+   "id": "5aea88d5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,17 +32,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "13b3ed99",
+   "execution_count": 3,
+   "id": "53d31c10",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<__main__.Counter at 0x1b9f6982130>"
+       "<__main__.Counter at 0x1a6f40f39d0>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -57,36 +53,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "4640b5f6",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n",
-      "1\n",
-      "2\n",
-      "3\n",
-      "4\n",
-      "5\n",
-      "6\n",
-      "7\n",
-      "8\n",
-      "9\n"
-     ]
-    }
-   ],
-   "source": [
-    "for x in Counter(0, 10):\n",
-    "    print(x)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
-   "id": "c3c92177",
+   "id": "4a57145b",
    "metadata": {},
    "outputs": [],
    "source": []
