Decorators: passing arguments to decorators

--- a/04_Methods_and_Functions/Lambda and Built-In Functions/Any and All.ipynb
+++ b/04_Methods_and_Functions/Lambda and Built-In Functions/Any and All.ipynb
@@ -18,9 +18,11 @@
     }
    ],
    "source": [
-    "# all: returns true if all elements of an iterable are truthy\n",
+    "# all: returns true if all elements in an iterable are truthy\n",
     "# list brackets are optional\n",
+    "\n",
     "people = ['Charlie', 'Casey', 'Cody', 'Carly', 'Cristina']\n",
+    "\n",
     "all([name[0] == 'C' for name in people])"
    ]
   },
@@ -42,8 +44,10 @@
     }
    ],
    "source": [
-    "# any: returns true if at least one element of an iterable is truthy\n",
+    "# any: returns true if at least one element in an iterable is truthy\n",
+    "\n",
     "people = ['Charlie', 'Casey', 'Cody', 'Carly', 'Cristina', 'Philip']\n",
+    "\n",
     "any(name[0] == 'P' for name in people)"
    ]
   },
