--- a/21_Working_with_CSV_and_Pickling/Reading CSV.ipynb
+++ b/21_Working_with_CSV_and_Pickling/Reading CSV.ipynb
@@ -2,7 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
+   "id": "aaf082bd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from csv import reader, DictReader"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "id": "97afce95",
    "metadata": {},
    "outputs": [
@@ -22,21 +32,45 @@
     }
    ],
    "source": [
-    "from csv import reader, DictReader\n",
-    "\n",
     "with open(\"fighters.csv\") as file:\n",
     "    # reader returns an iterator\n",
     "    csv_reader = reader(file)\n",
     "    # exclude the headers (first row)\n",
     "    next(csv_reader)\n",
     "    \n",
-    "    for name, country, height in csv_reader:\n",
+    "    for (name, country, height) in csv_reader:\n",
     "        print(f\"{name} is from {country}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 10,
+   "id": "20cdec4c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 ['Ryu', 'Japan', '175']\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open(\"fighters.csv\") as file:\n",
+    "    # reader returns an iterator\n",
+    "    csv_reader = reader(file)\n",
+    "    # exclude the headers (first row)\n",
+    "    next(csv_reader)\n",
+    "    \n",
+    "    for index, row in enumerate(csv_reader):\n",
+    "        if 'Ryu' in row:\n",
+    "            print(index, row)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "id": "2ea0727f",
    "metadata": {},
    "outputs": [
@@ -65,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 5,
    "id": "e9ae73f5",
    "metadata": {},
    "outputs": [
