web scraping project: parsing request to site with BS, storing all 10 page quote divs in a list

--- a/21_Working_with_CSV_and_Pickling/Reading CSV.ipynb
+++ b/21_Working_with_CSV_and_Pickling/Reading CSV.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "id": "aaf082bd",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "id": "97afce95",
    "metadata": {},
    "outputs": [
@@ -34,17 +34,17 @@
    "source": [
     "with open(\"fighters.csv\") as file:\n",
     "    # reader returns an iterator\n",
-    "    csv_reader = reader(file)\n",
+    "    fighters = reader(file)\n",
     "    # exclude the headers (first row)\n",
-    "    next(csv_reader)\n",
+    "    next(fighters)\n",
     "    \n",
-    "    for (name, country, height) in csv_reader:\n",
+    "    for (name, country, height) in fighters:\n",
     "        print(f\"{name} is from {country}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "id": "20cdec4c",
    "metadata": {},
    "outputs": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "2ea0727f",
    "metadata": {},
    "outputs": [
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "e9ae73f5",
    "metadata": {},
    "outputs": [
