--- a/13_Web_Scraping/Part_2/Web Scraping Project.ipynb
+++ b/13_Web_Scraping/Part_2/Web Scraping Project.ipynb
@@ -2,71 +2,378 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 42,
-   "id": "0e0dd121",
+   "execution_count": 1,
+   "id": "2ceef964",
    "metadata": {},
    "outputs": [],
    "source": [
     "import requests\n",
-    "from bs4 import BeautifulSoup\n",
-    "from csv import reader, writer"
+    "from bs4 import BeautifulSoup"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
-   "id": "92a4f740",
+   "execution_count": 4,
+   "id": "18adfa8c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "url = \"https://www.rithmschool.com/blog\"\n",
-    "response = requests.get(url)"
+    "url = f\"https://quotes.toscrape.com/page/{1}\"\n",
+    "response = requests.get(url)\n",
+    "soup = BeautifulSoup(response.text, 'html.parser')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
-   "id": "45538e08",
+   "execution_count": 5,
+   "id": "ee9068cb",
    "metadata": {},
    "outputs": [],
    "source": [
-    "soup = BeautifulSoup(response.text, \"html.parser\")"
+    "quotes = soup.select(\".quote\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
-   "id": "60a974d7",
+   "execution_count": 6,
+   "id": "08f1f8ad",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<div class=\"quote\" itemscope=\"\" itemtype=\"http://schema.org/CreativeWork\">\n",
+       " <span class=\"text\" itemprop=\"text\">“The world as we have created it is a process of our thinking. It cannot be changed without changing our thinking.”</span>\n",
+       " <span>by <small class=\"author\" itemprop=\"author\">Albert Einstein</small>\n",
+       " <a href=\"/author/Albert-Einstein\">(about)</a>\n",
+       " </span>\n",
+       " <div class=\"tags\">\n",
+       "             Tags:\n",
+       "             <meta class=\"keywords\" content=\"change,deep-thoughts,thinking,world\" itemprop=\"keywords\"/>\n",
+       " <a class=\"tag\" href=\"/tag/change/page/1/\">change</a>\n",
+       " <a class=\"tag\" href=\"/tag/deep-thoughts/page/1/\">deep-thoughts</a>\n",
+       " <a class=\"tag\" href=\"/tag/thinking/page/1/\">thinking</a>\n",
+       " <a class=\"tag\" href=\"/tag/world/page/1/\">world</a>\n",
+       " </div>\n",
+       " </div>,\n",
+       " <div class=\"quote\" itemscope=\"\" itemtype=\"http://schema.org/CreativeWork\">\n",
+       " <span class=\"text\" itemprop=\"text\">“It is our choices, Harry, that show what we truly are, far more than our abilities.”</span>\n",
+       " <span>by <small class=\"author\" itemprop=\"author\">J.K. Rowling</small>\n",
+       " <a href=\"/author/J-K-Rowling\">(about)</a>\n",
+       " </span>\n",
+       " <div class=\"tags\">\n",
+       "             Tags:\n",
+       "             <meta class=\"keywords\" content=\"abilities,choices\" itemprop=\"keywords\"/>\n",
+       " <a class=\"tag\" href=\"/tag/abilities/page/1/\">abilities</a>\n",
+       " <a class=\"tag\" href=\"/tag/choices/page/1/\">choices</a>\n",
+       " </div>\n",
+       " </div>,\n",
+       " <div class=\"quote\" itemscope=\"\" itemtype=\"http://schema.org/CreativeWork\">\n",
+       " <span class=\"text\" itemprop=\"text\">“There are only two ways to live your life. One is as though nothing is a miracle. The other is as though everything is a miracle.”</span>\n",
+       " <span>by <small class=\"author\" itemprop=\"author\">Albert Einstein</small>\n",
+       " <a href=\"/author/Albert-Einstein\">(about)</a>\n",
+       " </span>\n",
+       " <div class=\"tags\">\n",
+       "             Tags:\n",
+       "             <meta class=\"keywords\" content=\"inspirational,life,live,miracle,miracles\" itemprop=\"keywords\"/>\n",
+       " <a class=\"tag\" href=\"/tag/inspirational/page/1/\">inspirational</a>\n",
+       " <a class=\"tag\" href=\"/tag/life/page/1/\">life</a>\n",
+       " <a class=\"tag\" href=\"/tag/live/page/1/\">live</a>\n",
+       " <a class=\"tag\" href=\"/tag/miracle/page/1/\">miracle</a>\n",
+       " <a class=\"tag\" href=\"/tag/miracles/page/1/\">miracles</a>\n",
+       " </div>\n",
+       " </div>,\n",
+       " <div class=\"quote\" itemscope=\"\" itemtype=\"http://schema.org/CreativeWork\">\n",
+       " <span class=\"text\" itemprop=\"text\">“The person, be it gentleman or lady, who has not pleasure in a good novel, must be intolerably stupid.”</span>\n",
+       " <span>by <small class=\"author\" itemprop=\"author\">Jane Austen</small>\n",
+       " <a href=\"/author/Jane-Austen\">(about)</a>\n",
+       " </span>\n",
+       " <div class=\"tags\">\n",
+       "             Tags:\n",
+       "             <meta class=\"keywords\" content=\"aliteracy,books,classic,humor\" itemprop=\"keywords\"/>\n",
+       " <a class=\"tag\" href=\"/tag/aliteracy/page/1/\">aliteracy</a>\n",
+       " <a class=\"tag\" href=\"/tag/books/page/1/\">books</a>\n",
+       " <a class=\"tag\" href=\"/tag/classic/page/1/\">classic</a>\n",
+       " <a class=\"tag\" href=\"/tag/humor/page/1/\">humor</a>\n",
+       " </div>\n",
+       " </div>,\n",
+       " <div class=\"quote\" itemscope=\"\" itemtype=\"http://schema.org/CreativeWork\">\n",
+       " <span class=\"text\" itemprop=\"text\">“Imperfection is beauty, madness is genius and it's better to be absolutely ridiculous than absolutely boring.”</span>\n",
+       " <span>by <small class=\"author\" itemprop=\"author\">Marilyn Monroe</small>\n",
+       " <a href=\"/author/Marilyn-Monroe\">(about)</a>\n",
+       " </span>\n",
+       " <div class=\"tags\">\n",
+       "             Tags:\n",
+       "             <meta class=\"keywords\" content=\"be-yourself,inspirational\" itemprop=\"keywords\"/>\n",
+       " <a class=\"tag\" href=\"/tag/be-yourself/page/1/\">be-yourself</a>\n",
+       " <a class=\"tag\" href=\"/tag/inspirational/page/1/\">inspirational</a>\n",
+       " </div>\n",
+       " </div>,\n",
+       " <div class=\"quote\" itemscope=\"\" itemtype=\"http://schema.org/CreativeWork\">\n",
+       " <span class=\"text\" itemprop=\"text\">“Try not to become a man of success. Rather become a man of value.”</span>\n",
+       " <span>by <small class=\"author\" itemprop=\"author\">Albert Einstein</small>\n",
+       " <a href=\"/author/Albert-Einstein\">(about)</a>\n",
+       " </span>\n",
+       " <div class=\"tags\">\n",
+       "             Tags:\n",
+       "             <meta class=\"keywords\" content=\"adulthood,success,value\" itemprop=\"keywords\"/>\n",
+       " <a class=\"tag\" href=\"/tag/adulthood/page/1/\">adulthood</a>\n",
+       " <a class=\"tag\" href=\"/tag/success/page/1/\">success</a>\n",
+       " <a class=\"tag\" href=\"/tag/value/page/1/\">value</a>\n",
+       " </div>\n",
+       " </div>,\n",
+       " <div class=\"quote\" itemscope=\"\" itemtype=\"http://schema.org/CreativeWork\">\n",
+       " <span class=\"text\" itemprop=\"text\">“It is better to be hated for what you are than to be loved for what you are not.”</span>\n",
+       " <span>by <small class=\"author\" itemprop=\"author\">André Gide</small>\n",
+       " <a href=\"/author/Andre-Gide\">(about)</a>\n",
+       " </span>\n",
+       " <div class=\"tags\">\n",
+       "             Tags:\n",
+       "             <meta class=\"keywords\" content=\"life,love\" itemprop=\"keywords\"/>\n",
+       " <a class=\"tag\" href=\"/tag/life/page/1/\">life</a>\n",
+       " <a class=\"tag\" href=\"/tag/love/page/1/\">love</a>\n",
+       " </div>\n",
+       " </div>,\n",
+       " <div class=\"quote\" itemscope=\"\" itemtype=\"http://schema.org/CreativeWork\">\n",
+       " <span class=\"text\" itemprop=\"text\">“I have not failed. I've just found 10,000 ways that won't work.”</span>\n",
+       " <span>by <small class=\"author\" itemprop=\"author\">Thomas A. Edison</small>\n",
+       " <a href=\"/author/Thomas-A-Edison\">(about)</a>\n",
+       " </span>\n",
+       " <div class=\"tags\">\n",
+       "             Tags:\n",
+       "             <meta class=\"keywords\" content=\"edison,failure,inspirational,paraphrased\" itemprop=\"keywords\"/>\n",
+       " <a class=\"tag\" href=\"/tag/edison/page/1/\">edison</a>\n",
+       " <a class=\"tag\" href=\"/tag/failure/page/1/\">failure</a>\n",
+       " <a class=\"tag\" href=\"/tag/inspirational/page/1/\">inspirational</a>\n",
+       " <a class=\"tag\" href=\"/tag/paraphrased/page/1/\">paraphrased</a>\n",
+       " </div>\n",
+       " </div>,\n",
+       " <div class=\"quote\" itemscope=\"\" itemtype=\"http://schema.org/CreativeWork\">\n",
+       " <span class=\"text\" itemprop=\"text\">“A woman is like a tea bag; you never know how strong it is until it's in hot water.”</span>\n",
+       " <span>by <small class=\"author\" itemprop=\"author\">Eleanor Roosevelt</small>\n",
+       " <a href=\"/author/Eleanor-Roosevelt\">(about)</a>\n",
+       " </span>\n",
+       " <div class=\"tags\">\n",
+       "             Tags:\n",
+       "             <meta class=\"keywords\" content=\"misattributed-eleanor-roosevelt\" itemprop=\"keywords\"/>\n",
+       " <a class=\"tag\" href=\"/tag/misattributed-eleanor-roosevelt/page/1/\">misattributed-eleanor-roosevelt</a>\n",
+       " </div>\n",
+       " </div>,\n",
+       " <div class=\"quote\" itemscope=\"\" itemtype=\"http://schema.org/CreativeWork\">\n",
+       " <span class=\"text\" itemprop=\"text\">“A day without sunshine is like, you know, night.”</span>\n",
+       " <span>by <small class=\"author\" itemprop=\"author\">Steve Martin</small>\n",
+       " <a href=\"/author/Steve-Martin\">(about)</a>\n",
+       " </span>\n",
+       " <div class=\"tags\">\n",
+       "             Tags:\n",
+       "             <meta class=\"keywords\" content=\"humor,obvious,simile\" itemprop=\"keywords\"/>\n",
+       " <a class=\"tag\" href=\"/tag/humor/page/1/\">humor</a>\n",
+       " <a class=\"tag\" href=\"/tag/obvious/page/1/\">obvious</a>\n",
+       " <a class=\"tag\" href=\"/tag/simile/page/1/\">simile</a>\n",
+       " </div>\n",
+       " </div>]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "articles = soup.select(\"article\")"
+    "quotes"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
-   "id": "b09c2905",
+   "execution_count": 7,
+   "id": "7424c477",
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(\"blog_data\", \"w\") as csv_file:\n",
-    "    csv_writer = writer(csv_file)\n",
-    "    csv_writer.writerow(['Title', 'Link', 'Date'])\n",
-    "    \n",
-    "    for article in articles:\n",
-    "        a_tag = article.find(\"a\")\n",
+    "text = soup.find_all(class_ = 'text')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "c92d3246",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<span class=\"text\" itemprop=\"text\">“The world as we have created it is a process of our thinking. It cannot be changed without changing our thinking.”</span>,\n",
+       " <span class=\"text\" itemprop=\"text\">“It is our choices, Harry, that show what we truly are, far more than our abilities.”</span>,\n",
+       " <span class=\"text\" itemprop=\"text\">“There are only two ways to live your life. One is as though nothing is a miracle. The other is as though everything is a miracle.”</span>,\n",
+       " <span class=\"text\" itemprop=\"text\">“The person, be it gentleman or lady, who has not pleasure in a good novel, must be intolerably stupid.”</span>,\n",
+       " <span class=\"text\" itemprop=\"text\">“Imperfection is beauty, madness is genius and it's better to be absolutely ridiculous than absolutely boring.”</span>,\n",
+       " <span class=\"text\" itemprop=\"text\">“Try not to become a man of success. Rather become a man of value.”</span>,\n",
+       " <span class=\"text\" itemprop=\"text\">“It is better to be hated for what you are than to be loved for what you are not.”</span>,\n",
+       " <span class=\"text\" itemprop=\"text\">“I have not failed. I've just found 10,000 ways that won't work.”</span>,\n",
+       " <span class=\"text\" itemprop=\"text\">“A woman is like a tea bag; you never know how strong it is until it's in hot water.”</span>,\n",
+       " <span class=\"text\" itemprop=\"text\">“A day without sunshine is like, you know, night.”</span>]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "734761ba",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "next_btn = soup.find(class_ = 'next')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "3630a524",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<li class=\"next\">\n",
+       "<a href=\"/page/2/\">Next <span aria-hidden=\"true\">→</span></a>\n",
+       "</li>"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "next_btn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "6f2d91f9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_quotes = []\n",
     "\n",
-    "        title = a_tag.get_text()\n",
-    "        url = a_tag[\"href\"]\n",
-    "        date = article.find(\"time\")['datetime']\n",
-    "        csv_writer.writerow([title, url, date])"
+    "for page_num in range(1, 11):\n",
+    "    url = f\"https://quotes.toscrape.com/page/{page_num}\"\n",
+    "    response = requests.get(url)\n",
+    "    soup = BeautifulSoup(response.text, \"html.parser\")\n",
+    "    quotes = soup.select(\".quote\")\n",
+    "    all_quotes.extend(quotes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "6fb2ab22",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<bound method Tag.find of <div class=\"quote\" itemscope=\"\" itemtype=\"http://schema.org/CreativeWork\">\n",
+       "<span class=\"text\" itemprop=\"text\">“The world as we have created it is a process of our thinking. It cannot be changed without changing our thinking.”</span>\n",
+       "<span>by <small class=\"author\" itemprop=\"author\">Albert Einstein</small>\n",
+       "<a href=\"/author/Albert-Einstein\">(about)</a>\n",
+       "</span>\n",
+       "<div class=\"tags\">\n",
+       "            Tags:\n",
+       "            <meta class=\"keywords\" content=\"change,deep-thoughts,thinking,world\" itemprop=\"keywords\"/>\n",
+       "<a class=\"tag\" href=\"/tag/change/page/1/\">change</a>\n",
+       "<a class=\"tag\" href=\"/tag/deep-thoughts/page/1/\">deep-thoughts</a>\n",
+       "<a class=\"tag\" href=\"/tag/thinking/page/1/\">thinking</a>\n",
+       "<a class=\"tag\" href=\"/tag/world/page/1/\">world</a>\n",
+       "</div>\n",
+       "</div>>"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "all_quotes[0].find"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "fd8fdb89",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<span class=\"text\" itemprop=\"text\">“The world as we have created it is a process of our thinking. It cannot be changed without changing our thinking.”</span>"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "all_quotes[0].find(class_ = 'text')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "c38b85f2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<small class=\"author\" itemprop=\"author\">Albert Einstein</small>"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "all_quotes[0].find(class_ = 'author')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "02b5e35e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/author/Albert-Einstein'"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "all_quotes[0].find('a')['href']"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "438ea973",
+   "id": "67c84370",
    "metadata": {},
    "outputs": [],
    "source": []
