--- a/22_Regular_Expressions/parsing_URLs.ipynb
+++ b/22_Regular_Expressions/parsing_URLs.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "68313c52",
+   "id": "9a129f16",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "715eb54c",
+   "id": "0212123c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "da38c8ee",
+   "id": "615ce085",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "d5e54b94",
+   "id": "1bf51142",
    "metadata": {},
    "outputs": [
     {
@@ -53,8 +53,92 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 10,
+   "id": "9dae8ced",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'https://www.youtube.com/videos/about/cars/rockets'"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "match.group(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "68a7884e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'https'"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "match.group(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "3288c9a4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'www.youtube.com'"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "match.group(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "2404a484",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/videos/about/cars/rockets'"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "match.group(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 9,
-   "id": "076ec5f5",
+   "id": "9ee98e48",
    "metadata": {},
    "outputs": [
     {
@@ -75,7 +159,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "45b0ebe1",
+   "id": "d6cc28e6",
    "metadata": {},
    "outputs": [],
    "source": []
