--- a/22_Regular_Expressions/re_module.ipynb
+++ b/22_Regular_Expressions/re_module.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 135,
    "id": "fa002061",
    "metadata": {},
    "outputs": [],
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 136,
    "id": "965d33e1",
    "metadata": {},
    "outputs": [],
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 142,
    "id": "8594c6e9",
    "metadata": {},
    "outputs": [],
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 143,
    "id": "58686169",
    "metadata": {},
    "outputs": [],
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 144,
    "id": "33dcfb8a",
    "metadata": {},
    "outputs": [],
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 145,
    "id": "1219dad9",
    "metadata": {},
    "outputs": [
@@ -78,7 +78,7 @@
        "<re.Match object; span=(11, 23), match='415 555-1234'>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 145,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 146,
    "id": "4a4b9f4f",
    "metadata": {},
    "outputs": [
@@ -99,7 +99,7 @@
        "'415 555-1234'"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 146,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -110,13 +110,97 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 120,
+   "id": "c1ff1d42",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'415 555-1234'"
+      ]
+     },
+     "execution_count": 120,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "res.group(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "id": "96e3fc05",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'415'"
+      ]
+     },
+     "execution_count": 121,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "res.group(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "id": "23e32b29",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'555-1234'"
+      ]
+     },
+     "execution_count": 119,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "res.group(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
    "id": "0dfdeb02",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# returns all groupings\n",
+    "# returns a list of all groupings\n",
     "res = pattern.findall(\"Call me at 415 555-1234 or (310) 349-1900\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "id": "7e374772",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'415 555-1234'"
+      ]
+     },
+     "execution_count": 122,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "res[0].g"
    ]
   },
   {
