regular expressions: swapping file names

--- a/22_Regular_Expressions/symbolic_group_names.ipynb
+++ b/22_Regular_Expressions/symbolic_group_names.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "f98c6fa3",
    "metadata": {},
    "outputs": [],
@@ -12,22 +12,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "id": "17e3f9c2",
    "metadata": {},
    "outputs": [],
    "source": [
     "def parse_name(name):\n",
     "    # labelling the second group with a custom name that goes between the brackets: ?P<first>\n",
-    "    name_regex = re.compile(r\"(Mr\\.|Mrs\\.|Ms\\.|Mdme\\.) (?P<first>[A-Za-z]+) (?P<last>[A-Za-z]+)\")\n",
+    "    name_regex = re.compile(r\"(Mr\\.|Mrs\\.|Ms\\.|Mdme\\.) (?P<first>[a-z]+) (?P<last>[a-z]+)\", re.I)\n",
     "    res = name_regex.search(name)\n",
     "    print(res.group('first'))\n",
-    "    print(res.group('last'))    "
+    "    print(res.group('last'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "id": "698d0972",
    "metadata": {},
    "outputs": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 21,
    "id": "bf24ab0b",
    "metadata": {},
    "outputs": [],
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 22,
    "id": "64cc4eb6",
    "metadata": {},
    "outputs": [
@@ -71,7 +71,7 @@
        "{'d': '11', 'm': '11', 'y': '2020'}"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 23,
    "id": "8964b5e6",
    "metadata": {},
    "outputs": [
@@ -92,7 +92,7 @@
        "{'d': '30', 'm': '06', 'y': '2020'}"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 24,
    "id": "381e3b38",
    "metadata": {},
    "outputs": [
@@ -113,7 +113,7 @@
        "{'d': '04', 'm': '03', 'y': '1983'}"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 25,
    "id": "604f2171",
    "metadata": {},
    "outputs": [],
