--- a/22_Regular_Expressions/re_module.ipynb
+++ b/22_Regular_Expressions/re_module.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 3,
    "id": "fa002061",
    "metadata": {},
    "outputs": [],
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 38,
    "id": "965d33e1",
    "metadata": {},
    "outputs": [],
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 39,
    "id": "8594c6e9",
    "metadata": {},
    "outputs": [],
@@ -47,17 +47,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 40,
    "id": "58686169",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# the contents inside parens are called a group\n",
     "pattern = re.compile(r\"(\\(\\d{3}\\)|\\d{3}) (\\d{3}-\\d{4})\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 41,
    "id": "33dcfb8a",
    "metadata": {},
    "outputs": [],
@@ -68,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 42,
    "id": "1219dad9",
    "metadata": {},
    "outputs": [
@@ -78,7 +79,7 @@
        "<re.Match object; span=(11, 23), match='415 555-1234'>"
       ]
      },
-     "execution_count": 145,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -89,49 +90,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 44,
    "id": "4a4b9f4f",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'415 555-1234'"
-      ]
-     },
-     "execution_count": 146,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "415 555-1234\n",
+      "415 555-1234\n"
+     ]
     }
    ],
    "source": [
-    "res.group()"
+    "# group() without a number or a zero refers to the whole match\n",
+    "print(res.group())\n",
+    "print(res.group(0))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
-   "id": "c1ff1d42",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'415 555-1234'"
-      ]
-     },
-     "execution_count": 120,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "res.group(0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 31,
    "id": "96e3fc05",
    "metadata": {},
    "outputs": [
@@ -141,18 +121,19 @@
        "'415'"
       ]
      },
-     "execution_count": 121,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# group with number 1 refers to the first group: the content within the first set of parens.\n",
     "res.group(1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 32,
    "id": "23e32b29",
    "metadata": {},
    "outputs": [
@@ -162,7 +143,7 @@
        "'555-1234'"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -173,39 +154,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 45,
    "id": "0dfdeb02",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# returns a list of all groupings\n",
+    "# returns a list of all matches.\n",
     "res = pattern.findall(\"Call me at 415 555-1234 or (310) 349-1900\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 46,
    "id": "7e374772",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'415 555-1234'"
+       "[('415', '555-1234'), ('(310)', '349-1900')]"
       ]
      },
-     "execution_count": 122,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "res[0].g"
+    "res"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 15,
    "id": "7f5f95cc",
    "metadata": {},
    "outputs": [],
@@ -218,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 16,
    "id": "07978167",
    "metadata": {},
    "outputs": [
@@ -236,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 17,
    "id": "0fbb9e7f",
    "metadata": {},
    "outputs": [
@@ -255,7 +236,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3e7ae026",
+   "id": "c79b7e14",
    "metadata": {},
    "outputs": [],
    "source": []
