SQL-lite: creating tables and inserting data

--- a/22_Regular_Expressions/swapping_file_names.ipynb
+++ b/22_Regular_Expressions/swapping_file_names.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "4b19bcff",
+   "id": "e87df98c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "3c25122b",
+   "id": "4681b541",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,8 +32,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "5c798db6",
+   "execution_count": 3,
+   "id": "941f9bfd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,8 +42,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "8b2cd3f1",
+   "execution_count": 4,
+   "id": "1bb17bff",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,8 +52,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "afc0e7d1",
+   "execution_count": 5,
+   "id": "91f5e21b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,25 +64,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "e8ee46a7",
+   "execution_count": 7,
+   "id": "254a2865",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fixed_titles.sort()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "102acb03",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['1987 - Significant Others',\n",
-       " '1978 - Tales of the City',\n",
-       " '2014 - The Days of Anna Madrigal',\n",
-       " '2010 - Mary Ann in Autumn',\n",
+       "['1978 - Tales of the City',\n",
+       " '1980 - More Tales of the City',\n",
        " '1982 - Further Tales of the City',\n",
        " '1984 - Babycakes',\n",
-       " '1980 - More Tales of the City',\n",
+       " '1987 - Significant Others',\n",
        " '1989 - Sure of You',\n",
-       " '2007 - Michael Tolliver Lives']"
+       " '2007 - Michael Tolliver Lives',\n",
+       " '2010 - Mary Ann in Autumn',\n",
+       " '2014 - The Days of Anna Madrigal']"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -94,7 +104,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5d289120",
+   "id": "530bfb80",
    "metadata": {},
    "outputs": [],
    "source": []
